--- a/AI-ML-NLP.mediawiki
+++ b/AI-ML-NLP.mediawiki
@@ -12,7 +12,7 @@ AI, Algorithms, Data Mining, (Array) Data Structures, Machine Learning, NLP, ...
 == Clustering algorithms ==
 * Clustering.jl:: Basic functions for [https://github.com/johnmyleswhite/Clustering.jl [clustering data: k-means, dp-means], etc..
 
-== (Array) Data Structures ==
+== (Array, Matrix) Data Structures ==
 * ArrayViews.jl :: A Julia package to [https://github.com/lindahua/ArrayViews.jl explore a new system of array views].
 * [https://github.com/johnmyleswhite/BloomFilters.jl Bloom filters] are a probabilistic data structure that can be used to test the inclusion and exclusion of items in a list.
 * FArrayMod.jl:: [https://github.com/alsam/FArrayMod.jl provides the ability to use arbitrary starting indices for arrays] in Julia programming language.
@@ -23,6 +23,7 @@ AI, Algorithms, Data Mining, (Array) Data Structures, Machine Learning, NLP, ...
 * OffsetArrays.jl:: [https://github.com/alsam/OffsetArrays.jl provides the ability to use arbitrary starting indices for arrays] in Julia.
 * TimeArrays.jl :: [https://github.com/milktrader/TimeArrays.jl temporary repo exploring the union of SeriesPair arrays into multicolumn arrays] with similar behavior.
 * Trie.jl :: [https://github.com/JuliaLang/Trie.jl  Implementation of the trie data structure].
+* JSparse.jl :: [https://github.com/dmbates/JSparse.jl  A Julia implementation of functions in the CSparse and CXSparse libraries] developed by Tim Davis. 
 
 
 == Quantum Algorithms ==
