--- a/Actuarial-Science.mediawiki
+++ b/Actuarial-Science.mediawiki
@@ -1,8 +1,5 @@
 Statistics, Finance, Numerical analysis, ....
 
-= Econometrics =
-* Econometrics.jl :: [https://github.com/cgroll/Econometrics.jl Econometric models in Julia].
-
 = GeoStatistics =
 * Krige.jl:: [https://github.com/njwilson23/Krige.jl Kriging estimators] in Julia.
 
@@ -18,20 +15,24 @@ Statistics, Finance, Numerical analysis, ....
 * [https://github.com/malmaud/Pandas.jl Pandas.jl :: A Julia front-end to Python's Pandas package].
 
 = Statistics =
-* StatsBase.jl:: is the [https://github.com/JuliaStats/StatsBase.jl Stats meta-package for basic statistics functions] for Julia.
+* Civecm.jl:: [https://github.com/andreasnoackjensen/Civecm.jl  Cointegration in Vector Error Correction Models] in Julia.
 * The [http://juliastats.github.io/Distributions.jl/index.html Distributions] package.
 * The [http://juliastats.github.io/DataFrames.jl/io.html DataFrames manual section on IO]
 * DataArrays.jl:: This package [https://github.com/JuliaStats/DataArrays.jl extends Julia by introducing data structures that can contain missing data].
 * [https://github.com/lindahua/DiscreteInference.jl Viterbi algorithm]
-* [https://github.com/johnmyleswhite/SmoothingKernels.jl Smoothing kernels for use in kernel regression and kernel density estimation].
 * MCMC.jl:: is a [https://github.com/JuliaStats/MCMC.jl generic engine for implementing Bayesian statistical models using Markov Chain Monte Carlo (MCMC) methods]. 
 * MixedModels.jl:: [https://github.com/dmbates/MixedModels.jl  A Julia package for fitting (statistical) mixed-effects models].
 * Rmath.jl:: [https://github.com/dmbates/Rmath.jl  Archive of functions that emulate R's d-p-q-r functions for probability distributions].
 * RDatasets.jl:: Julia package for [https://github.com/johnmyleswhite/RDatasets.jl loading many of the data sets] available in R.
+* SmoothingKernels.jl:: [https://github.com/johnmyleswhite/SmoothingKernels.jl Smoothing kernels for use in kernel regression and kernel density estimation].
+* StatsBase.jl:: is the [https://github.com/JuliaStats/StatsBase.jl Stats meta-package for basic statistics functions] for Julia.
+
+== Econometrics ==
+* Econometrics.jl :: [https://github.com/cgroll/Econometrics.jl Econometric models in Julia].
+* GARCH.jl:: [https://github.com/AndreyKolev/GARCH.jl Generalized Autoregressive Conditional Heteroskedastic (GARCH) models] for Julia.
 * TimeSeries.jl:: [https://github.com/JuliaStats/TimeSeries.jl Time-series toolkit] for Julia.
 * TimeModels.jl:: [https://github.com/JuliaStats/TimeModels.jl Modeling time series] in Julia.
 * TimeData.jl:: [https://github.com/cgroll/TimeData.jl package provides fast, robust and convenient representation of time series data].
-* Civecm.jl:: [https://github.com/andreasnoackjensen/Civecm.jl  Cointegration in Vector Error Correction Models] in Julia.
 
 
 == Operations Research ==
