--- a/Graphics-Visualization.mediawiki
+++ b/Graphics-Visualization.mediawiki
@@ -5,12 +5,14 @@ Graphics, Plots and other Visualization libraries and packages. Also includes bl
 
 
 == Graphics == 
+* Ccv.jl:: [https://github.com/dhotson/Ccv.jl  Julia bindings for libccv's SIFT image feature detection]. 
 * Compose.jl:: [https://github.com/dcjones/Compose.jl Declarative vector graphics].
 * Images.jl:: [https://github.com/timholy/Images.jl An image library] for Julia.
 * ImageView.jl:: An [https://github.com/timholy/ImageView.jl interactive display of images and movies].
 * ImageTerm.jl :: https://github.com/meggart/ImageTerm.jl Julia functions to plot colorful maps] in the terminal.
 * Meshes.jl :: [https://github.com/twadleigh/Meshes.jl  Generation and manipulation of triangular meshes] for a type of polygon mesh in computer graphics.
 * TIFF.jl:: is the [https://github.com/rephorm/TIFF.jl TIFF image file support] for Julia.
+
 
 == Plotting ==
 * Gaston
