--- a/Utilities.mediawiki
+++ b/Utilities.mediawiki
@@ -3,6 +3,7 @@ Desktop and other handy utilities.
 = Audio libs =
 * [https://github.com/ssfrr/AudioIO.jl AudioIO.jl] is a Julia library for interfacing to audio streams, which include playing to and recording from sound cards, reading and writing audio files, sending to network audio streams, etc. Currently only playing to the sound card through PortAudio is supported.
 * Bebop.jl :: [https://github.com/zhemao/Bebop.jl  An audio library for the Julia programming language.
+* OSC.jl :: [https://github.com/fundamental/OSC.jl  Open Sound Control serialization library] for Julia.
 * PortAudio.jl:: [https://github.com/ssfrr/PortAudio.jl Julia interface API] for the [http://en.wikipedia.org/wiki/PortAudio PortAudio] (audio) library.
 * Sound.jl:: [https://github.com/JuliaLang/Sound.jl Reading and writing from WAV files].
 
