--- a/AI-ML-NLP.mediawiki
+++ b/AI-ML-NLP.mediawiki
@@ -48,9 +48,10 @@ AI, Algorithms, Data Mining, (Array) Data Structures, Machine Learning, NLP, ...
 * Stemmers.jl:: [https://github.com/tanmaykm/Stemmers.jl  Interface for text stemmer implementations].
 
 == Unicode, Encodings ==
-* ICU.jl :: Julia wrapper for the [https://github.com/nolta/ICU.jl International Components for Unicode (ICU) library].
+* ASCIIByte.jl:: Julia package [https://github.com/Elin-/ASCIIByte.jl to deal with Characters of 8 bits].
 * Codecs.jl:: [https://github.com/dcjones/Codecs.jl Common data encoding algorithms].
+* ICU.jl :: Julia wrapper for the [https://github.com/nolta/ICU.jl International Components for Unicode (ICU) library].
+* TypeCheck.jl:: a [https://github.com/astrieanna/TypeCheck.jl TypeChecker] for Julia.
 * [https://github.com/nolta/UnicodeExtras.jl UnicodeExtras.jl]
 * UTF16.jl :: [https://github.com/nolta/UTF16.jl  UTF16 string type] for Julia.
-* TypeCheck.jl:: a [https://github.com/astrieanna/TypeCheck.jl TypeChecker] for Julia.
 
