--- a/Science.mediawiki
+++ b/Science.mediawiki
@@ -19,7 +19,7 @@ Bioinformatics, Biotech, Genetics, ....
 * Phylogenetics.jl:: The Julia package for [https://github.com/Ward9250/Phylogenetics.jl  analysis of evolution and phylogeny].
 * Pagel.jl:: can [https://github.com/porterjamesj/Pagel.jl detect correlated evolution on phylogenies].
 * SpikeSorter.jl:: [https://github.com/grero/SpikeSorter.jl Spike sorting tool for experimental neuroscientists].
-
+* smoothlife-jl:: [https://github.com/jamak/smoothlife-jl is an implementation of the SmoothLife algorithm] in Julia.
 
 = PHYSICS =
 * [https://github.com/kofron/Codata.jl Codata.jl]
