--- a/Science.mediawiki
+++ b/Science.mediawiki
@@ -29,5 +29,5 @@ Bioinformatics, Biotech, Genetics, ....
 = CHEMISTRY =
 * ChemicalKinetics.jl :: [https://github.com/scidom/ChemicalKinetics.jl Simulation, Bayesian inference and Bayesian model selection for chemical kinetics] in Julia.
 * Synchrony.jl:: [https://github.com/simonster/Synchrony.jl Coherence/phase-locking statistics] in Julia.
-
+* Qlab.jl:: is a [https://github.com/blakejohnson/Qlab.jl data manipulation and analysis tool based on the Savitzky–Golay filter] - a digital filter that can be applied to a set of digital data points for the purpose of smoothing the data to increase the signal-to-noise ratio without greatly distorting the signal. Savitzky and Golay's paper is one of the most widely cited papers in the "Analytical Chemistry" journal.
 
