--- a/Mathematics.mediawiki
+++ b/Mathematics.mediawiki
@@ -1,5 +1,5 @@
 = Cryptography =
-
+* BlockCipherSelfStudy.jl:: [https://github.com/andrewcooke/BlockCipherSelfStudy.jl Blocks, and RC5].	
 * Nettle is a [https://github.com/staticfloat/Nettle.jl  simple wrapper around libnettle, a cryptographic library].
 * Stupid.jl:: [https://github.com/andrewcooke/Stupid.jl Analysis of an 8 bit version of the cipher] at http://news.quelsolaar.com/#comments101.
 
