--- a/Computer-Graphics.mediawiki
+++ b/Computer-Graphics.mediawiki
@@ -13,7 +13,6 @@ Graphics, Plots and other Visualization libraries and packages. Also includes bl
 * Meshes.jl :: [https://github.com/twadleigh/Meshes.jl  Generation and manipulation of triangular meshes] for a type of polygon mesh in computer graphics.
 * TIFF.jl:: is the [https://github.com/rephorm/TIFF.jl TIFF image file support] for Julia.
 
-
 == Plotting ==
 * Gaston
 * [https://github.com/johnmyleswhite/ASCIIPlots.jl ASCIIPlots.jl]
@@ -34,8 +33,9 @@ Graphics, Plots and other Visualization libraries and packages. Also includes bl
 * GL.jl:: [https://github.com/jayschwa/GL.jl Experimental OpenGL bindings] for Julia.
 * Jeff Bezanson's [http://nbviewer.ipython.org/url/beowulf.csail.mit.edu/18.337/black%20body%20radiation.ipynb Colorimetry in an iJulia notebook]
 * Interactive [https://github.com/GlenHertz/ProfileView.jl SVG flame graphs] for analyzing profiling to ProfileView. An HTML preview of the [http://htmlpreview.github.io/?https://raw.github.com/GlenHertz/ProfileView.jl/master/readme_images/profile.svg SVG example]
-* The interactive [http://johnmyleswhite.com/typetree/tree.html D3 visualization] of a Julia type tree and the [https://github.com/johnmyleswhite/TypeTree.jl source code for TypeTree].
 * [https://github.com/natj/matplot A MATLAB-like interface to Winston].
+* paper:: [https://github.com/andrewcooke/paper Crumpled paper - PDF plot] in Julia.
+* The interactive [http://johnmyleswhite.com/typetree/tree.html D3 visualization] of a Julia type tree and the [https://github.com/johnmyleswhite/TypeTree.jl source code for TypeTree].
 * VTK.jl:: [https://github.com/ihnorton/VTK.jl VTK bindings] for the Julia language.
 
 ==== HowTo's Blogs ====
