--- a/AI-ML-NLP.mediawiki
+++ b/AI-ML-NLP.mediawiki
@@ -46,15 +46,16 @@ AI, Algorithms, Data Mining, (Array) Data Structures, Machine Learning, NLP, ...
 
 = NLP =
 * Julia package for [https://github.com/johnmyleswhite/TextAnalysis.jl text analysis].
+* LTSV.jl:: [https://github.com/kshramt/LTSV.jl  Labeled Tab Separated Values (LTSV) parser] in Julia.
 * [https://github.com/iamed2/PyLexYacc.jl PyLexYacc.jl], an interface to Python Lex-Yacc package that uses reflection for most of its processing. 
 * [https://gist.github.com/kmsquire/7569843 Peter Norvig's spelling corrector ported to Julia], now a part of the [https://github.com/JuliaLang/DataStructures.jl DataStructures.jl] package.
 * Stemmers.jl:: [https://github.com/tanmaykm/Stemmers.jl  Interface for text stemmer implementations].
+* TypeCheck.jl:: a [https://github.com/astrieanna/TypeCheck.jl TypeChecker] for Julia.
 
 == Unicode, Encodings ==
 * ASCIIByte.jl:: Julia package [https://github.com/Elin-/ASCIIByte.jl to deal with Characters of 8 bits].
 * Codecs.jl:: [https://github.com/dcjones/Codecs.jl Common data encoding algorithms].
 * ICU.jl :: Julia wrapper for the [https://github.com/nolta/ICU.jl International Components for Unicode (ICU) library].
-* TypeCheck.jl:: a [https://github.com/astrieanna/TypeCheck.jl TypeChecker] for Julia.
 * [https://github.com/nolta/UnicodeExtras.jl UnicodeExtras.jl]
 * UTF16.jl :: [https://github.com/nolta/UTF16.jl  UTF16 string type] for Julia.
 
