--- a/Build-Automation.mediawiki
+++ b/Build-Automation.mediawiki
@@ -2,6 +2,7 @@ Build automation software, continuous integration (CI), continuous delivery (CD)
 
 
 = Build Automation =
+* Juke.jl:: [https://github.com/kshramt/Juke.jl `make` in Julia.
 * [https://github.com/simonster/MatlabCluster.jl Julia cluster manager for Matlab Job Scheduler]
 * [https://github.com/loladiro/OpenStack.jl OpenStack.jl]
 * [https://github.com/BenLauwens/SimJulia.jl SimJulia.jl ], a process-oriented simulation library written in Julia.
