--- a/Mathematics.mediawiki
+++ b/Mathematics.mediawiki
@@ -26,11 +26,13 @@
 * Church.jl:: helps you [https://github.com/LaurenceA/Church.jl perform inference in complex, and simple, probabilistic models].
 * [https://github.com/timholy/Cartesian.jl Cartesian.jl]: Fast multidimensional algorithms.
 * [https://github.com/johnmyleswhite/Calculus.jl Calculus.jl]
+* Catalan.jl :: [https://github.com/andrioni/Catalan.jl a combinatorics library] for Julia.
 * CRF.jl:: [https://github.com/slyrz/CRF.jl Conditional Random Fields] in Julia.
 * [https://github.com/natj/CellularAutomata.jl Cellular Automata] package.
 * Devectorize.jl :: A Julia framework for [https://github.com/lindahua/Devectorize.jl delayed expression evaluation].
 * DualNumbers.jl :: Julia package for representing [https://github.com/scidom/DualNumbers.jl dual numbers and for performing dual algebra].
 * Elliptic.jl :: [https://github.com/nolta/Elliptic.jl  Elliptic integral and Jacobi elliptic special functions].
+* GeoAlg.jl:: [https://github.com/andrioni/GeoAlg.jl A basic geometric algebra library] in Julia.
 * Geometry2D.jl:: [https://github.com/mroughan/Geometry2D.jl  2D computational geometry package] for Julia programming language.
 * GSL.jl:: Julia interface to the [https://github.com/jiahao/GSL.jl GNU Scientific Library] (GSL).
 * GaussQuadrature.jl: Another package that generates the [https://github.com/billmclean/GaussQuadrature.jl points and weights of the Gauss quadrature rules].
