--- a/Mathematics.mediawiki
+++ b/Mathematics.mediawiki
@@ -45,6 +45,7 @@
 * KrylovSolvers.jl: Solve sparse linear systems in an efficiently and iterative manner with [https://github.com/cfbaptista/KrylovSolvers.jl Krylov Solvers]
 * [https://github.com/lindahua/MATLAB.jl Matlab.jl] and how to [https://github.com/lindahua/MATLAB.jl#readwrite-mat-files read-write MATLAB files].
 * Intervals.jl:: A pure Julia reimplementation of [https://github.com/andrioni/Intervals.jl MPFI, a multiple precision interval arithmetic library].
+* MathProgBase.jl:: [https://github.com/JuliaOpt/MathProgBase.jl Solver-independent functions (incl. linprog and mixintprog) and low-level interface for Mathematical Programming].
 * MPFR.jl :: [https://github.com/andrioni/MPFR.jl  A Julia package for the GNU MPFR library].
 * MUMPS :: A wrapper for [https://github.com/lruthotto/MUMPS MUMPS (a MUltifrontal Massively Parallel sparse direct Solver of large linear systems)] in Julia.
 * NumericExtensions.jl: Julia extensions to provide high performance computational support for [https://github.com/lindahua/NumericExtensions.jl fast vectorized computation]
