--- a/AI-ML-NLP.mediawiki
+++ b/AI-ML-NLP.mediawiki
@@ -19,6 +19,7 @@ AI, Algorithms, Data Mining, (Array) Data Structures, Machine Learning, NLP, ...
 * Graphs.jl:: [https://github.com/JuliaLang/Graphs.jl Working with graph types and algorithms in Julia. Documentation for the [http://julialang.org/Graphs.jl/index.html Graphs.jl package].
 * Grid.jl:: [https://github.com/timholy/Grid.jl Interpolation and related operations on grids] for the Julia language.
 * ImmutableArrays.jl:: [https://github.com/twadleigh/ImmutableArrays.jl Statically-sized immutable vectors and matrices].
+* InverseService:: [https://github.com/IainNZ/InverseService Matrix Inverse] as a Service.
 * JSparse.jl :: [https://github.com/dmbates/JSparse.jl  A Julia implementation of functions in the CSparse and CXSparse libraries] developed by Tim Davis. 
 * Named.jl:: [https://github.com/HarlanH/Named.jl Julia named index and named vector types].
 * [https://github.com/davidavdav/NamedArray NamedArray], a Julia type that implements a drop-in replacement of Array with named dimensions and Dict-type indexes.
@@ -27,7 +28,6 @@ AI, Algorithms, Data Mining, (Array) Data Structures, Machine Learning, NLP, ...
 * TimeArrays.jl :: [https://github.com/milktrader/TimeArrays.jl temporary repo exploring the union of SeriesPair arrays into multicolumn arrays] with similar behavior.
 * Trie.jl :: [https://github.com/JuliaLang/Trie.jl  Implementation of the trie data structure].
 * LDA.jl:: [https://github.com/remusao/LDA.jl Linear Discriminant Analysis and Kernel Fisher Analysis].
-
 
 
 == Quantum Algorithms ==
